--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@solana/web3.js": "^1.95.3",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.32",
     "@solana/wallet-adapter-react-ui": "^0.9.33",
     "@solana/wallet-adapter-wallets": "^0.19.14",
     "lucide-react": "^0.428.0",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/react": "^18.2.48",
-    "@types/node": "^20.11.30"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.0",
+    "@types/react": "^18.2.21",
+    "@types/node": "^20.11.0"
   }
 }
